CSS bugfixing to make sure dropdown menus work on iOS/Android.

--- a/all/themes/localitee/css/localitee.css
+++ b/all/themes/localitee/css/localitee.css
@@ -1003,7 +1003,6 @@ display: none !important;
 	
 	.navbar-inner .account
 	{
-	float: none !important;	
 	}
 	
 }
